# email-newsletter

./: Cargo.toml  configuration.toml
.github/workflows/: general.yml
migrations/: 20240623132132_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
